--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord.js": "^11.4.2",
     "discord.js-commando": "^0.10.0",
     "ffmpeg-binaries": "^4.0.0",
+    "mysql": "^2.16.0",
     "opusscript": "0.0.6",
     "xmlhttprequest": "^1.8.0"
   }
