--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ffmpeg-binaries": "^4.0.0",
     "mysql": "^2.16.0",
     "opusscript": "0.0.6",
-    "xmlhttprequest": "^1.8.0"
+    "xmlhttprequest": "^1.8.0",
+    "ytdl-core": "^0.24.0"
   }
 }
