--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js",
+    "dev": "nodemon bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +24,7 @@
     "dotenv": "^6.0.0",
     "ffmpeg-binaries": "^4.0.0",
     "mongojs": "^2.6.0",
+    "nodemon": "^1.18.9",
     "opusscript": "0.0.6",
     "xmlhttprequest": "^1.8.0",
     "ytdl-core": "^0.24.0"
