--- a/package.json
+++ b/package.json
@@ -1,32 +1,44 @@
 {
   "name": "discordbot",
   "version": "1.0.0",
-  "description": "",
+  "description": "Bot para gerenciamento de servidores no Discord",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js",
-    "dev": "nodemon bot.js",
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MathsS1/discordbot.git"
   },
-  "author": "Matheus Mello de Lima",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/MathsS1/discordbot/issues"
   },
   "homepage": "https://github.com/MathsS1/discordbot#readme",
+  "author": {
+    "name": "Matheus Mello de Lima",
+    "email": "mellomatheuslima@gmail.com",
+    "url": "https://github.com/MathsS1"
+  },
   "dependencies": {
     "discord.js": "^11.4.2",
     "discord.js-commando": "^0.10.0",
     "dotenv": "^6.0.0",
     "ffmpeg-binaries": "^4.0.0",
     "mongojs": "^2.6.0",
-    "nodemon": "^1.18.9",
     "opusscript": "0.0.6",
     "xmlhttprequest": "^1.8.0",
     "ytdl-core": "^0.24.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
+  },
+  "nodemonConfig": {
+    "script": "npm start",
+    "ignore": ["test/*", "docs/*"],
+    "watch": [".env", "."],
+    "delay": "1000"
   }
 }
