--- a/package.json
+++ b/package.json
@@ -1,43 +1,52 @@
 {
-  "name": "discordbot",
-  "version": "1.0.0",
-  "description": "Bot para gerenciamento de servidores no Discord",
-  "main": "bot.js",
-  "scripts": {
-    "start": "node bot.js",
-    "dev": "nodemon"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MathsS1/discordbot.git"
-  },
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MathsS1/discordbot/issues"
-  },
-  "homepage": "https://github.com/MathsS1/discordbot#readme",
-  "author": {
-    "name": "Matheus Mello de Lima",
-    "email": "mellomatheuslima@gmail.com",
-    "url": "https://github.com/MathsS1"
-  },
-  "dependencies": {
-    "discord.js": "^11.4.2",
-    "discord.js-commando": "^0.10.0",
-    "dotenv": "^6.0.0",
-    "ffmpeg-binaries": "^4.0.0",
-    "mongojs": "^2.6.0",
-    "opusscript": "0.0.6",
-    "xmlhttprequest": "^1.8.0",
-    "ytdl-core": "^0.24.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.9"
-  },
-  "nodemonConfig": {
-    "script": "npm start",
-    "ignore": ["test/*", "docs/*"],
-    "watch": [".env", "."],
-    "delay": "1000"
-  }
+    "name": "magibot",
+    "version": "1.0.0",
+    "description": "A Discord Bot that plays music and manages your server",
+    "main": "bot.js",
+    "scripts": {
+        "start": "node bot.js",
+        "dev": "nodemon"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/mellomaths/magibot.git"
+    },
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/mellomaths/magibot/issues"
+    },
+    "homepage": "https://github.com/mellomaths/magibot#readme",
+    "author": {
+        "name": "Matheus Mello de Lima",
+        "email": "mellomatheuslima@gmail.com",
+        "url": "https://github.com/mellomaths"
+    },
+    "devDependencies": {
+        "eslint": "^5.16.0",
+        "eslint-config-airbnb-base": "^13.2.0",
+        "eslint-plugin-import": "^2.18.0",
+        "nodemon": "^1.18.9"
+    },
+    "nodemonConfig": {
+        "script": "npm start",
+        "ignore": [
+            "test/*",
+            "docs/*"
+        ],
+        "watch": [
+            ".env",
+            "."
+        ],
+        "delay": "1000"
+    },
+    "dependencies": {
+        "axios": "^0.19.0",
+        "discord.js": "^11.5.1",
+        "discord.js-commando": "^0.10.0",
+        "dotenv": "^8.0.0",
+        "ffmpeg-binaries": "3.2.2-3",
+        "mongoose": "^5.6.2",
+        "opusscript": "^0.0.6",
+        "ytdl-core": "^0.29.2"
+    }
 }
