--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "discord.js-commando": "^0.10.0",
     "dotenv": "^8.2.0",
     "superagent": "^5.1.0",
-    "superagent-absolute": "^1.0.1"
+    "superagent-absolute": "^1.0.1",
+    "ytdl-core": "^1.0.0",
+    "ytdl-core-discord": "^1.0.3"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
