--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "discord.js": "^11.5.1",
     "discord.js-commando": "^0.10.0",
     "dotenv": "^8.2.0",
+    "ffmpeg": "^0.0.4",
     "superagent": "^5.1.0",
     "superagent-absolute": "^1.0.1",
     "ytdl-core": "^1.0.0",
