--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "discord.js-commando": "^0.10.0",
     "dotenv": "^8.2.0",
     "ffmpeg": "^0.0.4",
+    "node-nlp": "^4.0.0-rc.4",
     "superagent": "^5.1.0",
     "superagent-absolute": "^1.0.1",
     "ytdl-core": "^1.0.0",
