--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "discord.js-commando": "^0.10.0",
     "dotenv": "^8.2.0",
     "ffmpeg": "^0.0.4",
+    "ffmpeg-binaries": "3.2.2-3",
     "superagent": "^5.1.0",
     "superagent-absolute": "^1.0.1",
     "ytdl-core": "^1.0.0",
