--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "ffmpeg": "^0.0.4",
     "ffmpeg-binaries": "3.2.2-3",
+    "parse-time": "^0.1.4",
     "superagent": "^5.1.0",
     "superagent-absolute": "^1.0.1",
     "ytdl-core": "^1.0.0",
