--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "dotenv": "^8.2.0",
     "ffmpeg": "^0.0.4",
     "ffmpeg-binaries": "3.2.2-3",
+    "global": "^4.4.0",
     "googleapis": "^45.0.0",
     "parse-time": "^0.1.4",
+    "pm2": "^4.2.0",
     "superagent": "^5.1.0",
     "superagent-absolute": "^1.0.1",
     "ytdl-core": "^1.0.0",
@@ -40,7 +42,7 @@
     "nodemon": "^1.19.4"
   },
   "scripts": {
-    "start": "node .",
+    "start": "pm2-runtime start ecosystem.config.js --env production",
     "dev": "nodemon",
     "lint": "eslint ."
   }
