--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     }
   ],
   "dependencies": {
+    "@keyv/sqlite": "^2.0.2",
     "chalk": "^2.4.2",
     "discord.js": "^11.5.1",
     "discord.js-commando": "^0.10.0",
@@ -28,6 +29,7 @@
     "ffmpeg-binaries": "3.2.2-3",
     "global": "^4.4.0",
     "googleapis": "^45.0.0",
+    "keyv": "^4.0.0",
     "node-nlp": "^4.0.0-rc.4",
     "parse-time": "^0.1.4",
     "pm2": "^4.2.0",
